--- a/U1.ipynb
+++ b/U1.ipynb
@@ -5,27 +5,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "queries = [\n",
+    "    'смотреть сериалы онлайн',\n",
+    "    'новости спорта',\n",
+    "    'афиша кино',\n",
+    "    'курс доллара',\n",
+    "    'сериалы этим летом',\n",
+    "    'курс по питону',\n",
+    "    'сериалы про спорт',\n",
+    "]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ievinshtein'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-57db84bd6790>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mievinshtein\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ievinshtein'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import ievinshtein\n"
+    "\n",
+    "\n"
    ]
   },
   {
