--- a/U2.1.ipynb
+++ b/U2.1.ipynb
@@ -61,23 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sum_1_word' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-47f18b5a037b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0msum_3_words\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mtotal_summ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum_1_word\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msum_2_words\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msum_3_words\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sum_1_word' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Поисковых запросов из 3 слова: 50.0%\n",
+      "Поисковых запросов из 2 слова: 37.5%\n",
+      "Поисковых запросов из 4 слова: 12.5%\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "queries = [\n",
     "    'смотреть сериалы онлайн',\n",
     "    'новости спорта',\n",
@@ -85,13 +82,26 @@
     "    'курс доллара',\n",
     "    'сериалы этим летом',\n",
     "    'курс по питону',\n",
-    "    'сериалы про спорт',\n",
-    "]\n"
+    "    'сериалы про спорт',   \n",
+    "]\n",
+    "\n",
+    "ger = {}\n",
+    "for query in queries:\n",
+    "    words = query.split()\n",
+    "    if len(words) in ger.keys():\n",
+    "        ger[len(words)] += 1\n",
+    "    else:\n",
+    "        ger.update({len(words):1})\n",
+    "        \n",
+    "for key, value in ger.items():\n",
+    "    proc = round((value / len(queries)) * 100, 2)\n",
+    "    \n",
+    "    print(f'Поисковых запросов из {key} слова: {proc}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
